// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateY renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(hasnot);
  -ms-transform: translateY(hasnot);
  transform: translateY(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(has);
  -ms-transform: translateY(has);
  transform: translateY(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(hasnot);
  -ms-transform: translateY(hasnot);
  transform: translateY(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(has);
  -ms-transform: translateY(has);
  transform: translateY(has);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(invalid.path.1);
  -ms-transform: translateY(invalid.path.1);
  transform: translateY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(invalid.path.1);
  -ms-transform: translateY(invalid.path.1);
  transform: translateY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(invalid.path.1);
  -ms-transform: translateY(invalid.path.1);
  transform: translateY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(invalid.path.1);
  -ms-transform: translateY(invalid.path.1);
  transform: translateY(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(-54881px);
  -ms-transform: translateY(-54881px);
  transform: translateY(-54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(-54881px);
  -ms-transform: translateY(-54881px);
  transform: translateY(-54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(-42365px);
  -ms-transform: translateY(-42365px);
  transform: translateY(-42365px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(-42365px);
  -ms-transform: translateY(-42365px);
  transform: translateY(-42365px);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(January);
  -ms-transform: translateY(January);
  transform: translateY(January);
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(January);
  -ms-transform: translateY(January);
  transform: translateY(January);
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(July);
    -ms-transform: translateY(July);
    transform: translateY(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(July);
    -ms-transform: translateY(July);
    transform: translateY(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

@media May {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

@media May {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(April);
  -ms-transform: translateY(April);
  transform: translateY(April);
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(January);
    -ms-transform: translateY(January);
    transform: translateY(January);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(April);
  -ms-transform: translateY(April);
  transform: translateY(April);
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(January);
    -ms-transform: translateY(January);
    transform: translateY(January);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: translateY(July);
    -ms-transform: translateY(July);
    transform: translateY(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: translateY(July);
    -ms-transform: translateY(July);
    transform: translateY(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(September);
    -ms-transform: translateY(September);
    transform: translateY(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(November);
    -ms-transform: translateY(November);
    transform: translateY(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(August);
    -ms-transform: translateY(August);
    transform: translateY(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateY(January);
    -ms-transform: translateY(January);
    transform: translateY(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateY(January);
    -ms-transform: translateY(January);
    transform: translateY(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(December);
    -ms-transform: translateY(December);
    transform: translateY(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateY(April);
    -ms-transform: translateY(April);
    transform: translateY(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateY(May);
    -ms-transform: translateY(May);
    transform: translateY(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateY(June);
    -ms-transform: translateY(June);
    transform: translateY(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(54881px);
  -ms-transform: translateY(54881px);
  transform: translateY(54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(54881px);
  -ms-transform: translateY(54881px);
  transform: translateY(54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(42365px);
  -ms-transform: translateY(42365px);
  transform: translateY(42365px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(42365px);
  -ms-transform: translateY(42365px);
  transform: translateY(42365px);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(July);
  -ms-transform: translateY(July);
  transform: translateY(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(June);
  -ms-transform: translateY(June);
  transform: translateY(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(June);
  -ms-transform: translateY(June);
  transform: translateY(June);
}

<div
    className="c0"
  />,
]
`;

exports[`translateY renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`translateY renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translateY(DarkSlateBlue);
  -ms-transform: translateY(DarkSlateBlue);
  transform: translateY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(DarkSlateBlue);
  -ms-transform: translateY(DarkSlateBlue);
  transform: translateY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(DarkSlateBlue);
  -ms-transform: translateY(DarkSlateBlue);
  transform: translateY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateY(DarkSlateBlue);
  -ms-transform: translateY(DarkSlateBlue);
  transform: translateY(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
